--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ jdk:
 deploy:
  provider: heroku
  api-key: 
-  secure: $HEROKU_API_KEY
+  secure: 880db2bd-7ea8-4843-be15-e606362c22cc
  app: ci-spring-boot
+2
