--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,5 @@ language: java
  jdk:
   - oraclejdk8 deploy:
   provider: heroku
-  api-key: 
-   secure: 880db2bd-7ea8-4843-be15-e606362c22cc
+  api-key: 880db2bd-7ea8-4843-be15-e606362c22cc
   app: ci-spring-boot2
