--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ deploy:
   provider: heroku
   api_key:
     secure: 880db2bd-7ea8-4843-be15-e606362c22cc
-  app: java-test-example
+  app: java-test-example2
 
